# oracle

./: .code-workspace  .env  .eslintrc.cjs  .eslintrc.json  .firebaserc  .gitignore  .graphclientrc.yml  .prettierignore  .prettierrc  .prettierrc.js  Cargo.toml  LICENSE  README.md  canister_ids.json  declarations.d.ts  dfx.json  exchange_rate_canister.wasm  firebase.json  index.html  package-lock.json  package.json  setupProxy.ts  tailwind.config.js  tailwind.config.ts  tsconfig.json  vite.config.ts  weather-auction-query.graphql  webpack.config.js
.github/workflows/: dev-deploy.yml  prod-deploy.yml
src/: App.tsx  index.jsx  index.tsx  rollbar.ts  rollbarSetup.ts
src/ABIs/: ApolloCoordinatorEventsAbi.ts  OrallyMulticallAbi.json  constants.ts
src/SVGIcons/: DeleteIcon.tsx  EditIcon.tsx  EyeIcon.tsx
src/apiHooks/: useGetSybilFeeds.ts  (+2 more)
src/oracle/: Cargo.toml  oracle.did
src/oracle/src/: fetcher.rs  http.rs  logger.rs  main.rs  migrations.rs  processing.rs  pubsub.rs  queries.rs
src/oracle/src/contracts/: icp_price.sol  icp_price_abi.json
src/sybil/: Cargo.toml  script.py  sybil.did
src/sybil-old/: Cargo.toml
src/sybil-old/src/: exchange_rate_canister.rs  main.rs  processing.rs  types.rs
src/sybil-old/src/merkle_tree/: standard.rs
src/sybil/src/: MerkleProofVerifier.sol  MerkleVerifier.sol  asset_data_store.rs  asset_data_store_final.rs  asset_data_store_final3.rs  asset_data_store_new.rs  asset_data_store_new2-temp-dirty.rs  asset_data_store_new2.rs  bytesc.rs  evm_interaction.rs  exchange_rate_canister.rs  main.rs  merkle_tree.rs  migration.rs  price_fetcher.rs  queries.rs  state.rs  timer.rs  types.rs
src/sybil/src/evm/: MerkleProofVerifier.sol  abi.json
src/sybil/src/merkle_tree/: core.rs
(+434 files in other folders)
