[package]
name = "oracle"
version = "0.1.0"
edition = "2021"

[dependencies]
candid = "0.8.0"
ic-cdk = { verison = "0.6.8", features = ["timers"] }
ic-cdk-macros = "0.6.8"
ic-web3 = { git = "https://github.com/rocklabs-io/ic-web3" }
hex = "0.4"
serde_json = "1.0.81"
serde = "1.0.126"
serde_bytes = "0.11.7"
