[package]
name = "sybil"
version = "0.1.0"
edition = "2021"

[dependencies]
candid = "0.8.0"
ic-cdk = { verison = "0.6.10", features = ["timers"] }
ic-cdk-macros = "0.6.10"
ic-web3 = { git = "https://github.com/verkhohliad/ic-web3" }
hex = "0.4"
serde_json = "1.0.81"
serde = "1.0.126"
serde_bytes = "0.11.7"
futures = "0.3.25"
canistergeek_ic_rust = "0.3.1"
time = { version = "0.3.15", default-features = false }
bytes = { verison = "1.4.0", features = ["serde"] }
tiny-keccak = "2.0.2"